fix: notice message overlap  input area

--- a/app/assets/stylesheets/notice.css.scss
+++ b/app/assets/stylesheets/notice.css.scss
@@ -2,7 +2,7 @@
   z-index: 99999;
   position: fixed;
   left: 50%;
-  bottom: 0;
+  top: 50px;
   text-align: center;
   width: 300px;
   margin-left: -150px;
